--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,13 @@ PGPORT=5432
 API_PORT=3000
 ADMIN_API_KEY=my-secret-key-123
 GEMINI_API_KEY=(your-gemini-api-key-here)
-GEMINI_LLM_MODEL=gemini-1.5-flash-latest # Specify your Gemini LLM model here
+GEMINI_LLM_MODEL=gemini-2.5-flash # Specify your Gemini LLM model here
 BASE_API_URL=http://localhost:8080
 RAG_SERVICE_URL=http://localhost:3001
 RAG_API_KEY=admin@2025
 VAT_SERVICE_URL=http://localhost:3000
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_URL=redis://localhost:6379
