fea: improve func

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ BASE_API_URL=http://localhost:8080
 RAG_SERVICE_URL=http://localhost:3001
 RAG_API_KEY=admin@2025
 VAT_SERVICE_URL=http://localhost:3000
+GOOGLE_MAPS_API_KEY=(your-google-maps-api-key-here)
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
