--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ BASE_API_URL=http://localhost:8080
 RAG_SERVICE_URL=http://localhost:3001
 RAG_API_KEY=admin@2025
 VAT_SERVICE_URL=http://localhost:3000
+GOOGLE_MAPS_API_KEY=(your-google-maps-api-key-here)
